# Docker_Flask_Streamlit

./: .gitignore  Dockerfile  README.md  app.py  app.yaml  docker-compose.yml  dockerignore  gitignore.txt  ped-dev-308120-3cb0e68c8f31.json  ped-prd-5b950150a8e0.json  pyproject.toml  requirements.txt  sessionstate.py
.ipynb_checkpoints/: Dockerfile-checkpoint  app-checkpoint.py  app-checkpoint.yaml  docker-compose-checkpoint.yml
analytics/: analytics_v2.py
analytics/.ipynb_checkpoints/: analytics_v2-checkpoint.py
docker/: Dockerfile
flask/: Dockerfile.api  cloudbuild.api.yaml  data_tickers.csv  requirements.txt
flask_streamlit/flask_application/: api.py  cloudbuild.yaml  requirements.txt
flask_streamlit/streamlit/: Dockerfile
flask_streamlit/streamlit_application/: requirements.txt
flask_streamlit/streamlit_application/.ipynb_checkpoints/: cloudbuild-checkpoint.yaml
patients/: pacientes_v2.py
rules/: regras_v2.py
streamlit/: app.py  corr.py  requirements.txt
streamlit/.ipynb_checkpoints/: app-checkpoint.py  cloudbuild.api-checkpoint.yaml  requirements-checkpoint.txt
utils/: functions.py
